# HSE-C-

./: README.md
hw_01/: Makefile
hw_01/include/: bmp.h
hw_01/src/: bmp.c  main.c
hw_02/: Makefile
hw_02/include/: Board.h  BoardTest.h  StdioBoardView.h  Test.h
hw_02/src/: Board.cpp  StdioBoardView.cpp  main.cpp
hw_02/test/: BoardTest.cpp  Test.cpp  test.cpp
hw_03/: CMakeLists.txt  Makefile  hw_03
hw_03/include/: Huffman.h  HuffmanArchiver.h  HuffmanNode.h  HuffmanTree.h  Parser.h  ParserExceptions.h
hw_03/src/: Huffman.cpp  HuffmanArchiver.cpp  HuffmanNode.cpp  HuffmanTree.cpp  Parser.cpp  ParserExceptions.cpp  main.cpp
hw_03/test/: TestCompression.cpp  TestEndToEnd.cpp  TestHuffmanTree.cpp
lab_02/: Makefile
lab_02/include/: str.h  test_str.h
lab_02/src/: str.c  test.c  test_str.c
lab_03/: Makefile
lab_03/include/: clist.h
lab_03/src/: clist.c  main.c
lab_04/: Makefile
lab_04/include/: mergesort.h
lab_04/src/: main.c  mergesort.c
lab_05/: Makefile
lab_05/include/: clist.h
lab_05/src/: clist.c  main.c  point_list.c
lab_09/: Makefile  README.md
lab_09/include/: shared_ptr.hpp
lab_09/src/: shared_ptr.cpp
lab_12/: Makefile
lab_12/include/: my_vector.h  my_vector_impl.h
lab_12/src/: main.cpp
lab_13/: Makefile
lab_13/include/: my_array.h
lab_13/src/: smoke_compile.cpp
lab_14/: Makefile
lab_14/include/: matrix.h
lab_14/src/: main.cpp  matrix.cpp
lab_15/include/: linq.hpp
